# backup

./: Backup.qmlproject  Backup.qmlproject.qtds  Backup.qmlproject.qtds.275708c  Backup.qmlproject.user.b8542d8  CMakeLists.txt  qds.cmake
App/: CMakeLists.txt  main.cpp
App/autogen/: environment.h
App/include/: argparser.h  backupargsstructui.h  compressionalgorithm.h  database.h  encryptionalgorithm.h  filebase.h  filter.h  logsmodel.h  mainclass.h  packer.h  restoreargsstructui.h  task.h  toptablemodel.h
App/include/aes/: aes.h
App/include/des/: des.h
App/include/huffman/: hnode.h  huffman.h  huffmancode_node.h
App/include/lz77/: lz77.h  ulz.h
App/src/: aes.cpp  argparser.cpp  backupargsstructui.cpp  compressor.cpp  database.cpp  des.cpp  filebase.cpp  filter.cpp  huffman.cpp  logsmodel.cpp  lz77.cpp  main.cpp  mainclass.cpp  packer.cpp  restoreargsstructui.cpp  task.cpp  toptablemodel.cpp  ulz.cpp
Backup/: CMakeLists.txt  Constants.qml  qmldir
Backup/designer/: plugin.metainfo
BackupContent/: App.qml  Backup.qml  Backup.ui.qmlfake85673.qmlproject.qtds  CMakeLists.txt  Config.qml  Restore.qml  Screen01.ui.qmlfake85673.qmlproject.qtds
